Have added basic js structure.

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>My list Elements</title>
 </head>
 <body>
-    <div id="container"></div>
+    <div id="js-task-main-container" class="task-main-container">
+        <input type="text" class="input-name-task" id="js-task-name-input">
+        <input type="button" value="Add" class="input-add-task" id="js-add-task-btn">
+        <ul id="js-list-container" class="task-list-container">
+        </ul>
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
