Have initialized repo, first commit. Have added part of the structure for website.

--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
-    <title>My list Elements</title>
+		<link rel="stylesheet" href="css/style.css">
+		<link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+    <title></title>
 </head>
 <body>
-    <div id="js-task-main-container" class="task-main-container">
-        <input type="text" class="input-name-task" id="js-task-name-input">
-        <input type="button" value="Add" class="input-add-task" id="js-add-task-btn">
-        <ul id="js-list-container" class="task-list-container">
-        </ul>
-    </div>
-    <script src="js/script.js"></script>
+	<div class="hero-banner">
+		<h1>
+			Black Order
+		</h1>
+		<img src="assets/pentagram.png" alt="">
+	</div>
+	<ul class="nav-menu">
+		<li>
+			<button>
+				Publicaciones
+			</button>
+			<button>
+				Tienda
+			</button>
+		</li>
+	</ul>
+	<div class="searched-user">
+		<div>
+			<img src="assets/user1.jpg" alt="">
+			<div class="seached-username">
+				ElHechiceroRomano
+			</div>
+			<div class="seached-email">
+				ernesto1970@hotmail.com
+			</div>
+		</div>
+	</div>
+	<div class="search-bar-wrapper">
+		<input type="email" name="" id="" placeholder= "example@hotmail.com">
+		<button>
+			Search
+		</button>
+	</div>
+	<div class="advertisement">
+		<img src="assets/firstAdd.jpg" alt="">
+	</div>
+	<div class="posts-section">
+		<div class="red-line">
+			<div class="title-section">
+				<h2>
+					Publicaciones
+				</h2>
+			</div>
+		</div>
+		<div class="user-pic-wrapper">
+			<img src="assets/blogger.jpg" alt="">
+			<div class="seached-username">
+				DulceMaríaJesucito777
+			</div>
+			<div class="seached-email">
+				dul.ma.jesucito@hotmail.com
+			</div>
+		</div>
+	</div>
+  <script src="js/script.js"></script>
 </body>
 </html>
