Have removed red color from content boxes on Bio Section.

--- a/src/index.html
+++ b/src/index.html
@@ -78,9 +78,11 @@
 
 				<div class="bio-container">
 					<div class="bio-wrapper-position">
-						<button class="bio-action-opener" class="js-open-bio">Bio</button>
-						<div class="bio-content-hidden" class="js-bio-container">
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi accusantium quasi ad ex delectus magnam, ratione quia id atque dolores praesentium neque quos nulla nostrum nisi porro unde maiores culpa?</p>
+						<button class="bio-action-opener" id="js-open-bio">Bio</button>
+						<div class="bio-content-hidden" id="js-bio-container">
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi accusantium quasi ad ex delectus magnam, ratione quia id atque dolores praesentium neque quos nulla nostrum nisi porro unde maiores culpa?
+							</p>
 						</div>
 					</div>
 
@@ -101,9 +103,15 @@
 							<img src="assets/post1.jpg" alt="" class="post-img-blur">
 						</div>
 						<div class="interaction-post-display">
-							<button class="social-btn-size">FaceBook</button>
-							<button class="more-btn-size">Ver más</button>
-							<button class="social-btn-size">Twitter</button>
+							<button class="social-btn-size">
+								FaceBook
+							</button>
+							<button class="more-btn-size">
+								Ver más
+							</button>
+							<button class="social-btn-size">
+								Twitter
+							</button>
 						</div>
 					</div>
 
@@ -129,9 +137,11 @@
 
 				<div class="bio-container">
 					<div class="bio-wrapper-position">
-						<button class="bio-action-opener" class="js-open-bio">Bio</button>
-						<div class="bio-content-hidden" class="js-bio-container">
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi accusantium quasi ad ex delectus magnam, ratione quia id atque dolores praesentium neque quos nulla nostrum nisi porro unde maiores culpa?</p>
+						<button class="bio-action-opener">Bio</button>
+						<div class="bio-content-hidden">
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi accusantium quasi ad ex delectus magnam, ratione quia id atque dolores praesentium neque quos nulla nostrum nisi porro unde maiores culpa?
+							</p>
 						</div>
 					</div>
 
@@ -152,9 +162,15 @@
 							<img src="assets/post2.jpg" alt="" class="post-img-blur">
 						</div>
 						<div class="interaction-post-display">
-							<button class="social-btn-size">FaceBook</button>
-							<button class="more-btn-size">Ver más</button>
-							<button class="social-btn-size">Twitter</button>
+							<button class="social-btn-size">
+								FaceBook
+							</button>
+							<button class="more-btn-size">
+								Ver más
+							</button>
+							<button class="social-btn-size">
+								Twitter
+							</button>
 						</div>
 					</div>
 				</div>
@@ -228,7 +244,9 @@
 		</div>
 
 		<div class="copyright-footer ">
-			<p>Copyright all rights reserved Black Order </p>
+			<p>
+				Copyright all rights reserved Black Order
+			</p>
 		</div>
 	</div>
   <script src="js/script.js"></script>
