Have display related elements as flex items.

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<link rel="stylesheet" href="css/style.css">
 		<link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
@@ -10,10 +10,12 @@
 </head>
 <body>
 	<div class="head-component-size">
-		<h1 class="company-title">
-			Black Order
-		</h1>
-		<img src="assets/pentaBlack.png" alt="company logo, Black Order" class="company-main-logo">
+		<div class="company-icon-position">
+			<h1 class="company-title">
+				Black Order
+			</h1>
+			<img src="assets/pentaBlack.png" alt="company logo, Black Order" class="company-main-logo">
+		</div>
 		<img src="assets/hero.jpg" alt="Forest, black and white." class="herobanner-background-size">
 	</div>
 
@@ -103,15 +105,11 @@
 							<img src="assets/post1.jpg" alt="" class="post-img-blur">
 						</div>
 						<div class="interaction-post-display">
-							<button class="social-btn-size">
-								FaceBook
-							</button>
+							<button class="social-btn-size social-facebook"></button>
 							<button class="more-btn-size">
 								Ver más
 							</button>
-							<button class="social-btn-size">
-								Twitter
-							</button>
+							<button class="social-btn-size social-twitter"></button>
 						</div>
 					</div>
 
@@ -162,15 +160,11 @@
 							<img src="assets/post2.jpg" alt="" class="post-img-blur">
 						</div>
 						<div class="interaction-post-display">
-							<button class="social-btn-size">
-								FaceBook
-							</button>
+							<button class="social-btn-size social-facebook"></button>
 							<button class="more-btn-size">
 								Ver más
 							</button>
-							<button class="social-btn-size">
-								Twitter
-							</button>
+							<button class="social-btn-size social-twitter"></button>
 						</div>
 					</div>
 				</div>
@@ -199,7 +193,7 @@
 				</div>
 				<div class="related-component">
 					<div class="related-image-size">
-						<img src="assets/rel2.jpg" alt="">
+						<img class="related-avatar-size" src="assets/rel2.jpg" alt="">
 					</div>
 					<div class="rel-post-inf">
 						<p>Pablo Pérez</p>
@@ -209,7 +203,7 @@
 				</div>
 				<div class="related-component">
 					<div class="related-image-size">
-						<img src="assets/rel3.jpg" alt="">
+						<img class="related-avatar-size" src="assets/rel3.jpg" alt="">
 					</div>
 					<div class="rel-post-inf">
 						<p> Azul John</p>
