Have added functionality to open images from posts.

--- a/lab3/src/index.html
+++ b/lab3/src/index.html
@@ -101,12 +101,12 @@
 					</div>
 
 					<div>
-						<div class="post-img-size">
-							<img src="assets/post1.jpg" alt="" class="post-img-blur">
+						<div class="post-container-hidden " id="js-img-container">
+							<img src="assets/post1.jpg" alt="" class="post-img-blur" id="js-img-blur">
 						</div>
 						<div class="interaction-post-display">
 							<button class="social-btn-size social-facebook"></button>
-							<button class="more-btn-size">
+							<button class="more-btn-size" id="js-img-opener">
 								Ver más
 							</button>
 							<button class="social-btn-size social-twitter"></button>
@@ -156,7 +156,7 @@
 					</div>
 
 					<div>
-						<div class="post-img-size">
+						<div class="post-container-hidden">
 							<img src="assets/post2.jpg" alt="" class="post-img-blur">
 						</div>
 						<div class="interaction-post-display">
@@ -210,7 +210,7 @@
 					</div>
 
 					<div>
-						<div class="post-img-size">
+						<div class="post-container-hidden">
 							<img src="assets/post1.jpg" alt="" class="post-img-blur">
 						</div>
 						<div class="interaction-post-display">
@@ -265,7 +265,7 @@
 					</div>
 
 					<div>
-						<div class="post-img-size">
+						<div class="post-container-hidden">
 							<img src="assets/post2.jpg" alt="" class="post-img-blur">
 						</div>
 						<div class="interaction-post-display">
@@ -319,7 +319,7 @@
 					</div>
 
 					<div>
-						<div class="post-img-size">
+						<div class="post-container-hidden">
 							<img src="assets/post1.jpg" alt="" class="post-img-blur">
 						</div>
 						<div class="interaction-post-display">
@@ -374,7 +374,7 @@
 					</div>
 
 					<div>
-						<div class="post-img-size">
+						<div class="post-container-hidden">
 							<img src="assets/post2.jpg" alt="" class="post-img-blur">
 						</div>
 						<div class="interaction-post-display">
@@ -428,7 +428,7 @@
 					</div>
 
 					<div>
-						<div class="post-img-size">
+						<div class="post-container-hidden">
 							<img src="assets/post1.jpg" alt="" class="post-img-blur">
 						</div>
 						<div class="interaction-post-display">
@@ -483,7 +483,7 @@
 					</div>
 
 					<div>
-						<div class="post-img-size">
+						<div class="post-container-hidden">
 							<img src="assets/post2.jpg" alt="" class="post-img-blur">
 						</div>
 						<div class="interaction-post-display">
